Changes
=======

0.2.2
-----

2011-11-26
~~~~~~~~~~

* Replaced facilify with stacks to reflect the rename
* Release now updates any ``version`` variable in the ``__init__.py`` file
  of the base package
* The ``--git`` option to the ``start`` command now doesn't give an error
* Documenation fixes

0.2.1
-----

2011-11-08
~~~~~~~~~~

* Added a ``buildkit release`` command to update version numbers within a 
  buildkit-generated Python project directory structure
* Updated the documentation to clarify some aspects of the install
* Included the ``buildkit_deb`` directory in the source distribution and
  updated the ``MANIFEST.in`` file template so that when a project is
  generated it will include the Debian directory

0.2.0
-----

2011-11-02
~~~~~~~~~~

* Complete overhaul to support the creation of Debian packages from Python
  software, add them to a repository and test them in virtual machines on Ubuntu
  LTS.

0.1.2
-----

2011-02-19
~~~~~~~~~~

* Bitbucket support
* Ability to package as ``.deb`` files from a virtualenv

0.1.1
-----

2010-09-05
~~~~~~~~~~

* Changed template ``MANIFEST.in`` to include docs ``Makefile`` and ``conf.py``
* Updated ``build.py`` example to build docs from distribution
* Changed the ``build_html()`` and ``run()`` signatures

2010-03-02
~~~~~~~~~~

* Added a command to package up dependant modules into a single directory

0.1.0
-----

* First version