@@ -2,8 +2,8 @@ Section: main/python
 Priority: extra
 Maintainer: James Gardner <james@pythonweb.org>
 Homepage: http://jimmyg.org/
-Package: buildkit
+Package: buildkit-apt-cache
 Version: 0.2.0+01+lucid
 Architecture: all
-Depends: python-buildkit 
-Description: Cloud infrastructure and .deb file management software
+Depends: buildkit, apt-cacher-ng
+Description: Cache .deb files downloaded for use in buildkit VMs
